implemented loadGarden
